--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ matplotlib>=3.3
 numpy>=1.23.5
 opencv-python>=4.1.1
 Pillow>=9.4.0
-psutil  # system resources
+psutil>=5.9.0
 PyYAML>=5.3.1
-requests>=2.23.0
+requests>=2.31.0
 scipy>=1.4.1
 thop>=0.1.1  # FLOPs computation
 torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
@@ -50,3 +50,4 @@ Flask-CORS>=3.0.10
 # albumentations>=1.0.3
 # pycocotools>=2.0.6  # COCO mAP
 wheel>=0.38.0 # not directly required, pinned by Snyk to avoid a vulnerability
+pywin32>=305; platform_system == "Windows"
