--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,16 @@
 # Base ------------------------------------------------------------------------
 gitpython>=3.1.30
 matplotlib>=3.3
-numpy>=1.23.5
-opencv-python>=4.1.1
+numpy>=1.22.0
+opencv-python>=4.7.0
 Pillow>=9.4.0
-psutil>=5.9.0
+psutil>=5.9.5
 PyYAML>=5.3.1
-requests>=2.31.0
+requests>=2.23.0
 scipy>=1.4.1
 thop>=0.1.1  # FLOPs computation
-torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
-torchvision>=0.9.0
+torch>=2.0.0
+torchvision>=0.15.0
 tqdm>=4.64.0
 ultralytics>=8.0.232
 # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
@@ -51,3 +51,11 @@ Flask-CORS>=3.0.10
 # pycocotools>=2.0.6  # COCO mAP
 wheel>=0.38.0 # not directly required, pinned by Snyk to avoid a vulnerability
 pywin32>=305; platform_system == "Windows"
+
+# Optional dependencies for CUDA support
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch>=2.0.0+cu118
+torchvision>=0.15.0+cu118
+
+# Additional dependencies
+python-dotenv>=1.0.0
